src/objects/Approval_Report__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseReportEmployeeName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Report / Employee Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approval Reports</relationshipLabel>
        <relationshipName>Approval_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <description>Date and time of the action for the given step.</description>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewActionDate__c</fullName>
        <label>New Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberODays__c</fullName>
        <formula>IF( DATEVALUE(CreatedDate) &gt;= DATE(2015,9,11), (IF(
ISBLANK(NewActionDate__c),
NOW() - DateTime__c,
NewActionDate__c- DateTime__c)), 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Report</label>
    <nameField>
        <displayFormat>AH-{0000000000}</displayFormat>
        <label>Approval Report ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>